# GazeDetect

./: .gitattributes  .gitignore  README.md  gaze.py  main.py  overlay.py  pyproject.toml  stats.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
tests/: test_gaze.py  test_overlay_smoke.py  test_stats.py
web/: README.md  biome.json  index.html  mise.toml  package.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: Controls.svelte  Hud.svelte
web/src/lib/: calibengine.ts  calibration.ts  features.ts  filter.ts  fixation.ts  gaze.ts  headpose.ts  linalg.ts  overlay.ts  sound.ts  stats.ts  tracker.ts
web/test/: calibengine.test.ts  calibration.test.ts  filter.test.ts  fixation.test.ts  gaze.test.ts  headpose.test.ts  headstab.test.ts  linalg.test.ts  stats.test.ts
